# Python-Military-Symbols

./: .gitignore  LICENSE.txt  NATO symbols.json  README.md  __init__.py  _json_filesystem.py  _svg_tools.py  _symbol_converter.py  build_script.sh  example_template.json  image-modifiers.py  json_filesystem.py  name_to_sidc.py  nato_symbol.py  pyproject.toml  setup.py  svg_tools.py  symbol_schema.py  symbol_template.py  templates.json
Examples/: example.py
Resources/: Symbol schema.json  _symbol_converter.py
example/: example.py  example_template.json  example_template.yml
military_symbol/: __init__.py  _svg_tools.py  individual_symbol.py  name_to_sidc.py  symbol_schema.py  symbol_template.py
src/military_symbol/: __init__.py  _svg_tools.py  command_line.py  constants_parser.py  drawing_items.py  font_rendering.py  individual_symbol.py  name_combiner.py  name_to_sidc.py  output_style.py  schema.py  symbol.py  symbol_cache.py  symbol_schema.py  symbol_template.py  symbols.json  template.py
src/military_symbol/schema/: activities.json  air.json  air_missile.json  common_modifiers.json  constants.json  cyberspace.json  dismounted_individual.json  land_civilian.json  land_equipment.json  land_installations.json  land_unit.json  mine_warfare.json  sea_subsurface.json  sea_surface.json  signals_intelligence.json  space.json  space_missile.json
